--- a/award.html
+++ b/award.html
@@ -88,7 +88,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <p>John Scott Award, created in 1816 as the John Scott Legacy Medal and Premium, is presented to men and women whose inventions improved the "comfort, welfare, and happiness of human kind" in a significant way and tesla won this medal on 1934 for Polyphase system of generating, transmitting, distributing and utilizing electricity </p>
     </div>
     <div class="w3-quarter">
-      <img src="https://urthtruthjustus.files.wordpress.com/2015/05/p100_medal5b15d.jpg"  alt="Nikola Tesla Awards" style="width:100%">
+      <img src="https://teslauniverse.com/sites/default/files/styles/default_extra_large_watermark/public/images/award_0009.jpg?itok=Y5UEn6wD"  alt="Nikola Tesla Awards" style="width:100%">
       <h3>IEEE Edison Medal </h3>
       <p>The IEEE Edison Medal is presented by the Institute of Electrical and Electronics Engineers (IEEE) "for a career of meritorious achievement in electrical science and tesla won this medal on 1916 </p>
     </div>
@@ -97,52 +97,27 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
-      <img src="" style="width:100%">
-      <h3>IEEE Edison Medal </h3>
-      <p>The IEEE Edison Medal is presented by the Institute of Electrical and Electronics Engineers (IEEE) "for a career of meritorious achievement in electrical science and tesla won this medal on 1916 </p>
-    </div>
-    <div class="w3-quarter">
-      <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/the-tesla-factor-01.jpg" alt="Nikola Tesla Book 6" style="width:100%">
-      <h3>Elliot Cresson Medal</h3>
-      <p>The Elliott Cresson Medal, also known as the Elliott Cresson Gold Medal, was the highest award given by the Franklin Institute and tesla won this award on 1894 on Engineering category Alternating Electric Currents of High Frequency citation</p>
-    </div>
-    <div class="w3-quarter">
-      <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/legacy-the-life-of-nikola-tesla-01.jpg" alt="Nikola Tesla Book 7" style="width:100%">
-      <h3>John Scott Medal</h3>
-      <p>John Scott Award, created in 1816 as the John Scott Legacy Medal and Premium, is presented to men and women whose inventions improved the "comfort, welfare, and happiness of human kind" in a significant way and tesla won this medal on 1934 for Polyphase system of generating, transmitting, distributing and utilizing electricity </p>
-    </div>
-    <div class="w3-quarter">
-      <img src="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/tesla-coil-01.jpg" alt="Nikola Tesla Book 8" style="width:100%">
-      <h3>IEEE Edison Medal </h3>
-      <p>The IEEE Edison Medal is presented by the Institute of Electrical and Electronics Engineers (IEEE) "for a career of meritorious achievement in electrical science and tesla won this medal on 1916 </p>
-    </div>
-    <div class="w3-quarter">
+      <img src="https://teslauniverse.com/sites/default/files/styles/default_medium_watermark/public/images/award_0014.jpg?itok=kdA-AsZQ
+      " style="width:100%">
       <h3>Doctorate,Univ.of poitiers </h3>
-       <p>on january 25th 1937 Tesla got the certificate of honorary doctorate from the universities of poitiers</p>
+      <p>on january 25th 1937 Tesla got the certificate of honorary doctorate from the universities of poitiers </p>
     </div>
     <div class="w3-quarter">
+      <img src="https://teslauniverse.com/sites/default/files/styles/default_medium_watermark/public/images/award_0003.jpg?itok=fpOEWhNy" alt="Nikola Tesla Awards 6" style="width:100%">
       <h3>Certificate of permanent membership of the Serbian Royal Academy awarded to Tesla</h3>
       <p>on 7 th march 1937 Tesla was the first scientist nominated for permanetnt membership of the serbian royal academy of sciences but wasnt initially elected.</p>
     </div>
     <div class="w3-quarter">
+      <img src="https://teslauniverse.com/sites/default/files/styles/default_medium_watermark/public/images/award_0013.jpg?itok=tSlec3sv" alt="Nikola Tesla Awards 7" style="width:100%">
       <h3>Certificate of honorary doctorate from the University of Zagreb</h3>
-      <p>On June 15th 1926 Tesla received a diploma of honorary doctorate from the faculcity of engeering university of belgrade </p>
+      <p>On June 15th 1926 Tesla received a diploma of honorary doctorate from the faculcity of engeering university of belgrade</p>
     </div>
     <div class="w3-quarter">
-      <h3>Certificate of Dr. Honoris Causa awarded to Tesla from the University of Paris</h3>
-      <p>on 6th November 1937 the unuversity of paris awarded Nikola Tesla the Dr.Honoris Causa of technical science</p>
+      <img src="https://teslauniverse.com/sites/default/files/styles/default_medium_watermark/public/images/award_0015.jpg?itok=i2ToQo8P" alt="Nikola Tesla Awards 8" style="width:100%">
+      <h3>Certificate of Dr. Honoris Causa awarded to Tesla from the University of Paris </h3>
+      <p>on 6th November 1937 the unuversity of paris awarded Nikola Tesla the Dr.Honoris Causa of technical science </p>
     </div>
-    <div class="w3-quarter">
-      <h3>Awarded to Tesla, the White Lion is the highest order of the Czech Republic</h3>
-      <p>on July 11th 1937 Mr Hurban presenting the grand cordon of the white lion said "our czechoslovak nations brotherly feeling towards you as a son of yugoslavia made it a duty,not a privilege to give you the decoration in the name of the president of our nation.Dr Eduard Benes "he also presented a diploma certifying Dr Tesla's honorary degree as a doctor of the university of prague.</p>
-    </div>
-    <div class="w3-quarter">
-      <h3>Certificate of honorary doctorate awarded to Tesla from the University of Belgrade</h3>
-      <p>on june 15 th 1926 Tesla received a diploma of honorary doctorate from the faculty of engineering university of balgrade.</p>
-    </div>
-    <div class="w3-quarter">
-      <h3>Tesla's certificate of membership for the New York Academy of Sciences</h3>
-      <p>May 27th 1907, It had been just offer 10 years since Tesla lectured on x-rays before the newyork academy of science when ther elected him as an active member</p>
+
     </div>
 
     <!-- Footer -->
